// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldLayout.svelte > should render groups 1`] = `
<body>
  <div>
    <field-layout
      class="vertical "
    >
       
      <field-layout
        class="horizontal flex-row"
      >
         
        <input-field
          class="flex flex-col input-text "
        >
          <label
            for="name.first"
          >
            First Name
          </label>
           
          <field
            class="w-full flex flex-row items-center"
          >
             
            <input
              aria-label="First Name"
              id="name.first"
              name="name.first"
              type="text"
            />
            
            
          </field>
           
        </input-field>
        
        
        <input-field
          class="flex flex-col input-text "
        >
          <label
            for="name.last"
          >
            Last Name
          </label>
           
          <field
            class="w-full flex flex-row items-center"
          >
             
            <input
              aria-label="Last Name"
              id="name.last"
              name="name.last"
              type="text"
            />
            
            
          </field>
           
        </input-field>
        
        
        
      </field-layout>
      
      <input-field
        class="flex flex-col input-number "
      >
        <label
          for="age"
        >
          Age
        </label>
         
        <field
          class="w-full flex flex-row items-center"
        >
           
          <input
            aria-label="Age"
            id="age"
            max="100"
            min="0"
            name="age"
            type="number"
          />
          
          
        </field>
         
      </input-field>
      
      
      
    </field-layout>
  </div>
</body>
`;

exports[`FieldLayout.svelte > should render items using custom component 1`] = `
<body>
  <div>
    <field-layout
      class="vertical "
    >
       
      <error>
        Unknown component '
        input
        '. Add custom mapping with the
				'using' property.
			
      </error>
      
      <p>
        Mr.
      </p>
      
      
      
    </field-layout>
  </div>
</body>
`;

exports[`FieldLayout.svelte > should render set of inputs 1`] = `
<body>
  <div>
    <field-layout
      class="vertical "
    >
       
    </field-layout>
  </div>
</body>
`;
